--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+-f https://download.pytorch.org/whl/torch_stable.html
 aiofiles>=0.5.0
 aiohttp>=3.7.4
 asyncio>=3.4.3
 fastai
-torch
-torchvision
+torch==1.8.1+cpu 
+torchvision==0.9.1+cpu
 numpy>=1.19.0
 pillow~=8.1
 python-multipart>=0.0.5
