--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 -f https://download.pytorch.org/whl/torch_stable.html
-aiofiles>=0.5.0
-aiohttp>=3.7.4
-asyncio>=3.4.3
+aiofiles==0.5.0
+aiohttp==3.7.4
+asyncio==3.4.3
 fastai
-fastbook
 torch==1.8.1+cpu 
 torchvision==0.9.1+cpu
 numpy>=1.19.0
-pillow~=8.1
-python-multipart>=0.0.5
-starlette>=0.13.6
-uvicorn>=0.11.7
+pillow>=8.1.2
+python-multipart==0.0.5
+starlette==0.13.6
+uvicorn==0.11.7
