--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ aiofiles==0.5.0
 aiohttp==3.7.4
 asyncio==3.4.3
 fastai
-torch==1.8.1+cpu 
-torchvision==0.9.1+cpu
-numpy>=1.19.0
-pillow>=8.1.2
+torch==1.8.0+cpu
+torchvision==0.9.0+cpu
+numpy==1.19.0
+pillow~=8.1
 python-multipart==0.0.5
 starlette==0.13.6
 uvicorn==0.11.7
